#APPBUG-2492 fixing ipad text cutoff
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@28830 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/browse/browse.css
+++ b/projects/Media/docroot/assets/css/browse/browse.css
@@ -552,3 +552,8 @@ ul.products .description-skin{
 /* -------------------------------- */
 /* LARGE VISUAL END                 */
 /* -------------------------------- */
+
+.browse .main .sortSelectButton .title,
+.popupcontentghost .sortSelectButton .title{
+  line-height:18px;
+}
